--- a/django_project/blog/templates/blog/base.html
+++ b/django_project/blog/templates/blog/base.html
@@ -44,6 +44,11 @@
     <main role="main" class="container">
         <div class="row">
             <div class="col-md-8">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div role="alert" class="alert alert-{{ message.tags }}">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
                 {% block body %}{% endblock %}
             </div>
             <div class="col-md-4">
