--- a/django_project/users/templates/users/register.html
+++ b/django_project/users/templates/users/register.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block body %}
     <div class="content-section">
@@ -6,7 +7,7 @@
             {% csrf_token %} 
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Register</legend>
-                {{ form.as_p }}
+                {{ form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
