--- a/django_project/users/templates/users/login.html
+++ b/django_project/users/templates/users/login.html
@@ -4,17 +4,17 @@
 {% block body %}
     <div class="content-section">
         <form method="post">
-            {% csrf_token %} 
+            {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Register</legend>
+                <legend class="border-bottom mb-4">Log In</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Log In</button>
             </div>
             <div class="border-top pt3">
                 <small class="text-muted">
-                    Already have an account? <a href="{% url 'login' %}">Log in</a>
+                    Don't have an account? <a href="{% url 'register' %}">Sign up</a>
                 </small>
             </div>
         </form>
