--- a/django_project/users/templates/users/profile.html
+++ b/django_project/users/templates/users/profile.html
@@ -1,6 +1,13 @@
 {% extends "blog/base.html" %}
 
 {% block body %}
-    <h6>Welcome to your profile page, You're logged in as {{ user.username }}</h6>
-    <a href="{% url 'logout' %}">Logout</a>
+    <div class="content-section">
+        <div class="media">
+            <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }}">
+            <div class="media-body">
+                <h2 class="account-heading">{{ user.username }}</h2>
+                <p class="text-secondary">{{ user.email }}</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
