--- a/django_project/users/templates/users/profile.html
+++ b/django_project/users/templates/users/profile.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block body %}
     <div class="content-section">
@@ -9,5 +10,16 @@
                 <p class="text-secondary">{{ user.email }}</p>
             </div>
         </div>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Profile</legend>
+                {{ u_form|crispy }} 
+                {{ p_form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Save</button>
+            </div>
+        </form>
     </div>
 {% endblock %}
