--- a/django_project/blog/templates/blog/index.html
+++ b/django_project/blog/templates/blog/index.html
@@ -3,10 +3,11 @@
 {% block body %}
     {% for post in posts %}
         <article class="media content-section">
+            <img class="rounded-circle article-img" src="{{ post.author.profile.avatar.url }}" />
             <div class="media-body">
                 <div class="article-metadata">
                     <a class="mr-2" href="#">{{ post.author }}</a>
-                    <small class="text-muted">{{ post.created_date|date:"N j, Y" }}</small> 
+                    <small class="text-muted">{{ post.created_date|date:"N j, Y" }}</small>
                 </div>
                 <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.body }}</p>
