create, update, and delete posts

--- a/django_project/blog/templates/blog/post_form.html
+++ b/django_project/blog/templates/blog/post_form.html
@@ -6,16 +6,11 @@
         <form method="post">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
+                <legend class="border-bottom mb-4">Blog Post</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Log In</button>
-            </div>
-            <div class="border-top pt3">
-                <small class="text-muted">
-                    Don't have an account? <a href="{% url 'register' %}">Sign up</a>
-                </small>
+                <button class="btn btn-outline-info" type="submit">Post</button>
             </div>
         </form>
     </div>
