--- a/django_project/users/templates/users/register.html
+++ b/django_project/users/templates/users/register.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block body %}
+{% block content %}
     <div class="content-section">
         <form method="post">
             {% csrf_token %} 
