--- a/django_project/blog/templates/blog/index.html
+++ b/django_project/blog/templates/blog/index.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 
-{% block body %}
+{% block content %}
     {% for post in posts %}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ post.author.profile.avatar.url }}" />
@@ -10,7 +10,7 @@
                     <small class="text-muted">{{ post.created_date|date:"N j, Y" }}</small>
                 </div>
                 <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-                <p class="article-content">{{ post.body }}</p>
+                <p class="article-content">{{ post.content }}</p>
             </div>
         </article>
     {% endfor %}
