--- a/django_project/blog/templates/blog/post_detail.html
+++ b/django_project/blog/templates/blog/post_detail.html
@@ -1,15 +1,19 @@
 {% extends "blog/base.html" %}
 
-{% block body %}
+{% block content %}
     <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ object.author.profile.avatar.url }}" />
         <div class="media-body">
             <div class="article-metadata">
                 <a class="mr-2" href="#">{{ object.author }}</a>
                 <small class="text-muted">{{ object.created_date|date:"N j, Y" }}</small>
+                {% if object.author == user %}
+                    <a class="btn btn-secondary btn-sm my-1" href="{% url 'post-edit' object.id %}">Edit</a>
+                    <a class="btn btn-danger btn-sm my-1" href="{% url 'post-delete' object.id %}">Delete</a>
+                {% endif %}
             </div>
             <h2 class="article-title">{{ object.title }}</h2>
-            <p class="article-content">{{ object.body }}</p>
+            <p class="article-content">{{ object.content }}</p>
         </div>
     </article>
 {% endblock %}
