--- a/django_project/users/templates/users/logout.html
+++ b/django_project/users/templates/users/logout.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 
-{% block body %}
+{% block content %}
     <h4>You have been successfully logged out.</h4>
     <div class="border-top pt-3">
         <small class="text-muted">
