--- a/django_project/users/templates/users/profile.html
+++ b/django_project/users/templates/users/profile.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block body %}
+{% block content %}
     <div class="content-section">
         <div class="media">
             <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }}">
