--- a/django_project/blog/templates/blog/post_detail.html
+++ b/django_project/blog/templates/blog/post_detail.html
@@ -5,7 +5,7 @@
         <img class="rounded-circle article-img" src="{{ object.author.profile.avatar.url }}" />
         <div class="media-body">
             <div class="article-metadata">
-                <a class="mr-2" href="#">{{ object.author }}</a>
+                <a class="mr-2" href="{% url 'user-posts' object.author.username  %}">{{ object.author }}</a>
                 <small class="text-muted">{{ object.created_date|date:"N j, Y" }}</small>
                 {% if object.author == user %}
                     <a class="btn btn-secondary btn-sm my-1" href="{% url 'post-edit' object.id %}">Edit</a>
