--- a/django_project/blog/templates/blog/user_posts.html
+++ b/django_project/blog/templates/blog/user_posts.html
@@ -1,6 +1,7 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
+    <h1 class="mb-3">Post by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
     {% for post in posts %}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ post.author.profile.avatar.url }}" />
