--- a/application/templates/users/logout.html
+++ b/application/templates/users/logout.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
     <h4>You have been successfully logged out.</h4>
