--- a/application/templates/users/login.html
+++ b/application/templates/users/login.html
@@ -1,20 +1,23 @@
-{% extends "blog/base.html" %}
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
 
 {% block content %}
     <div class="content-section">
         <form method="post">
-            {% csrf_token %} 
+            {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Register</legend>
+                <legend class="border-bottom mb-4">Log In</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Log In</button>
+                <small class="text-muted ml-2">
+                    <a href="{% url 'password_reset' %}">Forgot Password?</a>
+                </small>
             </div>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                    Already have an account? <a href="{% url 'login' %}">Log in</a>
+                    Don't have an account? <a href="{% url 'register' %}">Sign up</a>
                 </small>
             </div>
         </form>
