--- a/application/templates/users/password_reset_confirm.html
+++ b/application/templates/users/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -10,7 +10,7 @@
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Request Password Reset</button>
+                <button class="btn btn-outline-info" type="submit">Reset Password</button>
             </div>
         </form>
     </div>
